# AutoGitSemVer

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  ActivateEpilog.py  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  MAINTAINERS.md  README.md  SECURITY.md  build_binary.py  minisign_key.pub  pyproject.toml
.github/: CODEOWNERS  release_sources.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/release_impl/: action.yml
.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml  standard.yaml  standard.yml
src/: AutoGitSemVer.yaml  BuildBinary.py
src/AutoGitSemVer/: AutoGitSemVerSchema.json  EntryPoint.py  Lib.py  __init__.py
src/AutoGitSemVer/scripts/: UpdatePythonVersion.py
src/ConfigurationSchema/: AutoGitSemVerSchema.SimpleSchema  README.md
tests/: EntryPoint_UnitTest.py  Lib_UnitTest.py
tests/scripts/: UpdatePythonVersion_UnitTest.py
